--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         lucide.createIcons();
 
         // Updated API URL
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwRRbnqadeW4gd-Olppa3pAKvHJ2s-XXoXSvtizF2rXYmRK205-c2Uw8cRzozeohwg07g/exec';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxazdE_SpiQiwHIVIZIHFCmO7ssQhwFeWmQ-71-dS2pHyakKyYJack__Uqnmmoq-NNd5Q/exechttps://script.google.com/macros/s/AKfycbxazdE_SpiQiwHIVIZIHFCmO7ssQhwFeWmQ-71-dS2pHyakKyYJack__Uqnmmoq-NNd5Q/exec';
 
         // REDIRECTION SYSTEM
         window.onload = function() {
